<resources>
    <string name="app_name">鑫考教育</string>
    <!--LoginActivity-->
    <string name="back">返回</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="problem">遇到问题</string>
    <string name="forget">忘记密码</string>
    <string name="hot_line">400–189–0086</string>
    <string name="home">首页</string>
    <string name="chat">聊天</string>
    <string name="share">分享</string>
    <string name="me">我</string>
    <!--Setting_Activity-->
    <string name="logout">退出登录</string>
    <string name="news_msg">新消息通知</string>
    <string name="clean_caches">清理缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="common_problem">常见问题</string>
    <!--Conversation_list-->
    <string name="contacts_menu">通讯录</string>
    <string name="chat_group">发起群聊</string>

</resources>
