<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_animation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    android:orientation="vertical">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="click"
        android:text="@string/back"
        android:textColor="#CCCCCC"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/u134" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo_phone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/u136" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/logo_phone"
            android:layout_toEndOf="@id/logo_phone"
            android:layout_toRightOf="@id/logo_phone"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:maxLength="11" />

        <ImageView
            android:id="@+id/logo_password"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/logo_phone"
            android:layout_marginTop="30dp"
            android:src="@mipmap/u138"
           />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/logo_password"
            android:layout_toEndOf="@id/logo_password"
            android:layout_toRightOf="@id/logo_password"
            android:hint="@string/pwd_hint"
            android:maxLength="16"
            android:inputType="textPassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_shape_1"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_problem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:onClick="click"
            android:clickable="true"
            android:text="@string/problem"
            android:textSize="15sp"
            android:focusable="true" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:src="@mipmap/u152" />

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:onClick="click"
            android:clickable="true"
            android:text="@string/forget"
            android:textSize="15sp"
            android:focusable="true" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hot_line" />
</LinearLayout>