<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

    </android.support.v4.view.ViewPager>

    <!--<RadioGroup-->
    <!--android:id="@+id/radio_group"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_weight="0"-->
    <!--android:background="@mipmap/u186"-->
    <!--android:orientation="horizontal"-->
    <!--android:padding="5dp">-->

    <!--<RadioButton-->
    <!--android:id="@+id/home"-->
    <!--style="@style/radio_button_style"-->
    <!--android:drawableTop="@drawable/select_home"-->
    <!--android:text="@string/home"-->
    <!--android:textColor="@drawable/select_tab_text_color" />-->

    <!--<RadioButton-->
    <!--android:id="@+id/chat"-->
    <!--style="@style/radio_button_style"-->
    <!--android:drawableTop="@drawable/select_chat"-->
    <!--android:text="@string/chat"-->
    <!--android:textColor="@drawable/select_tab_text_color" />-->

    <!--<RadioButton-->
    <!--android:id="@+id/share"-->
    <!--style="@style/radio_button_style"-->
    <!--android:drawableTop="@drawable/select_share"-->
    <!--android:text="@string/share"-->
    <!--android:textColor="@drawable/select_tab_text_color" />-->

    <!--<RadioButton-->
    <!--android:id="@+id/me"-->
    <!--style="@style/radio_button_style"-->
    <!--android:drawableTop="@drawable/select_me"-->
    <!--android:text="@string/me"-->
    <!--android:textColor="@drawable/select_tab_text_color" />-->
    <!--</RadioGroup>-->
    <LinearLayout
        android:id="@+id/frame_btn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment">

        <RelativeLayout
            android:id="@+id/btn_container_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_btn_select_bg"
                android:drawableTop="@drawable/select_home"
                android:onClick="onTabClick"
                android:paddingBottom="2dp"
                android:paddingTop="7dp"
                android:scaleType="matrix"
                android:text="@string/home"
                android:textColor="@drawable/select_tab_text_color"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_btn_select_bg"
                android:drawableTop="@drawable/select_chat"
                android:onClick="onTabClick"
                android:paddingBottom="2dp"
                android:paddingTop="7dp"
                android:scaleType="matrix"
                android:text="@string/chat"
                android:textColor="@drawable/select_tab_text_color"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_btn_select_bg"
                android:drawableTop="@drawable/select_share"
                android:onClick="onTabClick"
                android:paddingBottom="2dp"
                android:paddingTop="7dp"
                android:scaleType="matrix"
                android:text="@string/share"
                android:textColor="@drawable/select_tab_text_color"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/me"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_btn_select_bg"
                android:drawableTop="@drawable/select_me"
                android:onClick="onTabClick"
                android:paddingBottom="2dp"
                android:paddingTop="7dp"
                android:scaleType="matrix"
                android:text="@string/me"
                android:textColor="@drawable/select_tab_text_color"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>